adjusted toggle issue so that the light/dark mode icons work again and adjusted the colors of the asterisks and error list in light mode.

--- a/styles.css
+++ b/styles.css
@@ -715,6 +715,10 @@ body.light-mode .discount #submitButton:hover {
     background-color: #93BEFF;
 }
 
+body.light-mode .contact span, body.light-mode #errorList {
+    color: red;
+}
+
 /* Color of error message for number 'discount' generator */
 #message {
     color: red;
